--- a/klimaland-app/src/styles/_responsivenew.scss
+++ b/klimaland-app/src/styles/_responsivenew.scss
@@ -1160,7 +1160,6 @@
 
               .horizontal-bottom-layout {
                 .description {
-                  width: 100%;
                   h4 {
                     font-size: 1rem;
                   }
@@ -1169,7 +1168,7 @@
 
               &.En-chart {
                 .visualization-container {
-                  height: 80%;
+                  height: 75%;
                   .chart {
                     .y-axis,
                     .x-axis {
@@ -1185,7 +1184,7 @@
                       }
                     }
                     .description {
-                      height: 15%;
+                      height: 25%;
                     }
                   }
                 }
@@ -1398,7 +1397,7 @@
               &.Ab-chart {
                 .biotonne-weight {
                   .description {
-                    height: 15%;
+                    height: 35%;
 
                     span {
                       &.footnote {
@@ -1407,7 +1406,7 @@
                     }
                   }
                   .visualization-container {
-                    height: 70%;
+                    height: 65%;
 
                     .chart {
                       text {
@@ -1443,7 +1442,7 @@
               &.Ge-chart {
                 .newbuildings-energy {
                   .description {
-                    width: 100%;
+                    width: calc(100% - 2rem);
                     .title {
                       margin: 0 auto;
                       h4 {
@@ -1461,8 +1460,7 @@
                     }
 
                     .legend {
-                      // position: absolute;
-                      // bottom: 0;
+                      margin-top: 0;
                       height: 19%;
                       width: 95%;
                       display: inline-block;
@@ -1534,16 +1532,16 @@
 
                 .avg-heating {
                   .description {
-                    height: 15%;
+                    height: 25%;
                     h4 {
                       font-size: 1rem;
                     }
                   }
 
                   .visualization-container {
-                    height: 85%;
-                    transform: translateY(-15px);
-                    -webkit-transform: translateY(-15px);
+                    height: 75%;
+                    transform: translateY(-10px);
+                    -webkit-transform: translateY(-10px);
 
                     .chart {
                       .non-clipped-elements {
